Fixed Inspector Itinerary item layout and added custom scrollbar

--- a/Frontend/Pages/css/letmecook.css
+++ b/Frontend/Pages/css/letmecook.css
@@ -107,7 +107,7 @@ body {
 #main .inspector {
     width: 30%;
     height: 100%;
-    background-color: rgb(232, 232, 232);
+    background-color: #2B2D31;
     display: flex;
     flex-direction: column;
     align-items: stretch;
@@ -215,24 +215,41 @@ body {
 }
 
 #main .inspector .itinerary {
-    height: 100vh;
+    flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: flex-start;
     padding: 25px 0;
     row-gap: 30px;
     background-color: #2B2D31;
     overflow-y: scroll;
+
+    /* Border added to give illusion that scrollbar doesn't stick to side. Padding moves items back to center (otherwise they're a bit off to the left due to border) */
+    padding-left: 5px;
+    border-right: 5px solid transparent;
+}
+
+#main .inspector .itinerary::-webkit-scrollbar {
+    width: 8px;
+}
+
+#main .inspector .itinerary::-webkit-scrollbar-thumb {
+    background: rgb(83, 83, 83);
+    border-radius: 1em;
+}
+
+#main .inspector .itinerary::-webkit-scrollbar-track {
+    background: transparent;
 }
 
 #main .inspector .itinerary .item {
     width: 80%;
     display: flex;
-    border-radius: 1em;
+    flex-shrink: 0;
+    border-radius: 1.3em;
     overflow: hidden;
-    background-color: rgb(79, 78, 78);
-    color: white;
-    /* box-shadow: 0px 5px 10px 3px rgb(215, 215, 215); */
+    /* overflow: hidden; */
     transition: 0.2s ease-in-out;
 }
 
@@ -243,6 +260,7 @@ body {
 
 #main .inspector .itinerary .item .left {
     width: 100px;
+    padding: 15px;
     color: white;
     font-family: "Gloria Hallelujah", cursive;
     font-weight: 800;
@@ -257,11 +275,14 @@ body {
 
 #main .inspector .itinerary .item .right {
     flex: 1;
+    display: flex;
+    flex-direction: column;
     padding: 15px;
     font-family: "Gloria Hallelujah", cursive;
     font-style: normal;
     line-height: 20px;
     color: gray;
+    background-color: #44464b;
 }
 
 #main .inspector .itinerary .item .right .title {
@@ -281,7 +302,7 @@ body {
     font-weight: 300;
     font-size: 14px;
     margin-top: 5px;
-    line-height: 13px;
+    line-height: 17px;
     color: rgb(163, 163, 163);
 }
 
@@ -304,24 +325,24 @@ body {
 }
 
 /*=== Calendar Area ===*/
-#main .right {
+#main .calendar {
     flex: 1;
     height: 100%;
     background-color: #44464b;
 }
 
-#main .right .top {
+#main .calendar .top {
     width: 100%;
     height: 100px;
 }
 
-#main .right .bottom {
+#main .calendar .bottom {
     width: 100%;
     height: calc(100% - 100px);
     overflow: hidden;
 }
 
-#main .right .bottom .header {
+#main .calendar .bottom .header {
     width: 100%;
     height: 30px;
     background-color: #2c3034;
@@ -331,19 +352,19 @@ body {
     border-bottom: 2px solid #888;
 }
 
-#main .right .bottom .header .dayName {
+#main .calendar .bottom .header .dayName {
     display: flex;
     justify-content: flex-end;
     align-items: center;
     margin-right: 10px;
 }
 
-#main .right .bottom .header .dayName:nth-child(6n),
-#main .right .bottom .header .dayName:nth-child(7n) {
+#main .calendar .bottom .header .dayName:nth-child(6n),
+#main .calendar .bottom .header .dayName:nth-child(7n) {
     color: #ffffff;
 }
 
-#main .right .bottom .dayDisplay {
+#main .calendar .bottom .dayDisplay {
     width: 100%;
     height: calc(100% - 30px);
     display: grid;
@@ -351,7 +372,7 @@ body {
     grid-template-rows: repeat(5, minmax(0, 1fr));
 }
 
-#main .right .dayDisplay .day {
+#main .calendar .dayDisplay .day {
     display: flex;
     justify-content: flex-end;
     padding-top: 5px;
@@ -359,16 +380,16 @@ body {
     color: #FFFFFF;
 }
 
-#main .right .dayDisplay .day:is(:nth-child(7n + 6), :nth-child(7n + 7)):nth-child(-n + 35) {
+#main .calendar .dayDisplay .day:is(:nth-child(7n + 6), :nth-child(7n + 7)):nth-child(-n + 35) {
     background-color: #343639;
     color: rgb(202, 202, 202);
     border-color: rgb(157, 157, 157) !important;
 }
 
-#main .right .dayDisplay .day:is(:not(:nth-child(7n + 7))):nth-child(-n + 35) {
+#main .calendar .dayDisplay .day:is(:not(:nth-child(7n + 7))):nth-child(-n + 35) {
     border-right: 1px solid rgb(105, 105, 105);
 }
 
-#main .right .dayDisplay .day:is(:not(:nth-child(29), :nth-child(30), :nth-child(31), :nth-child(32), :nth-child(33), :nth-child(34), :nth-child(35))) {
+#main .calendar .dayDisplay .day:is(:not(:nth-child(29), :nth-child(30), :nth-child(31), :nth-child(32), :nth-child(33), :nth-child(34), :nth-child(35))) {
     border-bottom: 1px solid rgb(105, 105, 105);
 }
